<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_player">

    <fragment
        android:id="@+id/navigation_player"
        android:name="com.baudio.ui.player.PlayerFragment"
        android:label="@string/title_player"
        tools:layout="@layout/fragment_player" />

    <fragment
        android:id="@+id/navigation_recorder"
        android:name="com.baudio.ui.recorder.RecorderFragment"
        android:label="@string/title_recorder"
        tools:layout="@layout/fragment_recorder" />

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.baudio.ui.library.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_library" />
</navigation>