<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical"
    tools:ignore="UnusedAttribute">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="false"
        android:padding="16dp">

        <ImageView
            android:id="@android:id/icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            tools:src="@drawable/ic_home_black_24dp"
            android:contentDescription="@string/default_channel_icon"/>

        <TextView
            android:id="@android:id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@android:id/icon"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="normal"
            android:contentDescription="@string/setting_title" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@android:id/summary"
            android:layout_centerVertical="true"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/colorAccentDark"
            android:textSize="14sp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/setting_description"/>
    </RelativeLayout>

</LinearLayout>